@@ -56,7 +56,14 @@
 
   <url type="bugtracker">https://gitlab.gnome.org/GNOME/shotwell/issues</url>
   <releases>
-      <release version="0.32.11" date="2025-06-08" urgency="high" type="stable">
+      <release version="0.32.12" date="2025-06-08" urgency="low" type="stable">
+          <description>
+              <ul>
+                  <li>Fixes an issue with appdata in 0.32.11</li>
+              </ul>
+          </description>
+      </release>
+      <release version="0.32.12" date="2025-06-08" urgency="high" type="stable">
           <description>
               <ul>
                   <li>Fixes publishing to Google Photos</li>
